# rwh

./: README.building  toolchain-quirks.txt
blog/: announce.txt
en/: 00book.xml  Makefile  ManualSnippets.hs  appA-escapes.xml  appA-install.xml  appB-escapes.xml  appX-web.xml  bibliography.xml  book-index.xml  book-shortcuts.xml  ch00-preface.xml  ch00-whyfp.xml  ch01-bis.xml  ch01-starting.xml  ch01-whyfp.xml  ch02-funcs-types.xml  ch02-starting.xml  ch03-defining-types.xml  ch03-funcs-types.xml  ch03a-defining-types.xml  ch04-defining-types.xml  ch04-fp.xml  ch05-fp.xml  ch05-library.xml  ch05-typeclasses.xml  ch06-io.xml  ch06-library.xml  ch06-typeclasses.xml  ch07-globs-and-regexps.xml  ch07-io.xml  ch07-typeclasses.xml  ch07a-json-typeclass.xml  ch08-globs-and-regexps.xml  ch08-io.xml  ch09-find-dsl.xml  ch09-globs-and-regexps.xml  ch10-barcode.xml  ch10-binary.xml  ch10-find-dsl.xml  ch11-binary.xml  (+53 more)
en/figs/: ch12-barcode-example.xcf.bz2
en/snippets/: ch01-cat.xml  ch02-wc.xml  ch26-less.xml  ch26-loop-1.xml  ch26-loop-2.xml  ch26-prof-1.xml  ch26-timing-1.xml  ch27-ddump-simpl-1.xml  ch27-loop-1.xml  ch27-prof-2.xml
examples/ch01/: KMinima.hs  WC.hs  counter1.hs  counter2.hs
examples/ch02/: basics.ghci  myDrop.hs  types.ghci
examples/ch03/: Assign.hs  BogusPattern.hs  BookStore.hs  Enum.hs  Guard.hs  LocalFunction.hs  MySecond.hs  MyType.hs  OsVersion.hs  Plus.hs  Roots.hs  RoundToEven.hs  SimpleTypes.hs  Tuple.hs  TypeName.hs  Wrapper.hs  add.hs  ch03.basics.ghci  error.ghci  func.ghci  indent.ghci  infix.ghci  letwhere.hs  list.ghci  myDrop.ghci  myDrop.hs  myTake.ghci  myTake.hs  mytype.ghci  roundToEven.ghci  shadowing.ghci  tuple.ghci  usingtypes.ghci  wrapper.ghci
examples/ch04/: Adler32.hs  AlgebraicVector.hs  BadPattern.hs  BadTree.hs  BogusPattern.hs  BookSection.hs  BookStore.hs  Fold.hs  GoodTree.hs  Map.hs  MySecond.hs  Nullable.hs  Partial.hs  Roots.hs  ShapeUnion.hs  SimpleTypes.hs  SuffixTree.hs  Sum.hs  Tree.hs  Wrapper.hs  algebraicvector.ghci  badpattern.ghci  booksection.ghci  bookstore.ghci  ch04.exercises.ghci  ch04.exercises.hs  ch04.list.ghci  ch04.map.ghci  (+16 more)
meta/: assignments.txt  chapters.txt  feedback.txt  hcar.tex  purpose.txt  status.ods
tools/: AutoID.hs  GhciMain.hs  GhciSession.hs  Makefile  Pty.hsc  Snip.hs  Snippet.hs  TODO  Util.hs  tools.cabal
tools/cbits/: Pty.c  Pty.h
tools/include/: Pty.h
tools/javascript/: hsbook.js
tools/rwh/comments/: feeds.py  urls.py
tools/rwh/templates/: comment.html
web/: Index.hs  README  TODO  alpha.htaccess  alpha.htdigest  beta.htaccess  complete.htaccess  complete.htdigest  index.alpha.html.in  index.beta.html.in  index.complete.html  index.complete.html.in  index.html.in  realworldhaskell.conf  robots.txt  sitecustomize.py  styles.css  texpand.py
xsl/: all-ids.xsl  base-html-stylesheet.xsl  chunk-stylesheet.xsl
(+377 files in other folders)
