Name: tools
Version: 0.1
License: GPL
License-File: COPYING
Author: Bryan O'Sullivan <bos@serpentine.com>
Maintainer: Bryan O'Sullivan <bos@serpentine.com>
Copyright: 2007 Bryan O'Sullivan <bos@serpentine.com>
Stability: Experimental
Category: Real World Haskell
Build-depends: base, mtl
Synopsis: Tools for building the Real World Haskell book.
Description:
  The snippets program pulls named snippets out of Haskell source
  code, formatting them as DocBook XML entities.

Executable: snippets
Main-Is: Snip.hs
Other-Modules:
    Snippet
GHC-options: -Wall -O2
