Name: tools
Version: 0.1
License: GPL
License-File: COPYING
Author: Bryan O'Sullivan <bos@serpentine.com>
Maintainer: Bryan O'Sullivan <bos@serpentine.com>
Copyright: 2007 Bryan O'Sullivan <bos@serpentine.com>
Stability: Experimental
Category: Real World Haskell
Synopsis: Tools for building the Real World Haskell book.
Description:
  The snippets program pulls named snippets out of Haskell source
  code, formatting them as DocBook XML entities.
Cabal-version:     >= 1.2
Build-type: Simple

Flag splitBase
  Description:     Choose the new, split-up base package.

Executable snippets
  if flag(splitBase)
    Build-depends: base, bytestring, directory, filepath, mtl, regex-posix, unix
  else
    Build-depends: base, mtl, regex-posix, unix
  Main-Is: Snip.hs
  Other-Modules:
      Snippet
  GHC-options: -Wall -O2

Executable autoid
  if flag(splitBase)
    Build-depends: base, bytestring, mtl, regex-posix, unix
  else
    Build-depends: base, mtl, regex-posix, unix
  Main-Is: AutoID.hs
  GHC-options: -Wall -O2

Executable ghcisession
  if flag(splitBase)
    Build-depends: base, bytestring, mtl, regex-posix, unix
  else
    Build-depends: base, mtl, regex-posix, unix
  Main-Is: GhciMain.hs
  Other-Modules:
      GhciSession
      Pty
  GHC-options: -Wall -O2
  Include-Dirs: cbits
  Includes: Pty.h
  C-Sources: cbits/Pty.c
